--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -1,3 +1,17 @@
-<h1>{{ item.item_name }} </h1>
-<h2>{{ item.item_description }}</h2>
-<h3>{{ item.item_price }}</h3>
+{% extends 'food/base.html' %}
+{% block body %}
+<br>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img width="500px" height=500px src="{{ item.item_img}}" class="card" />
+        </div>
+        <div class="col-md-7">
+            <h1>{{ item.item_name }}</h1>
+            <h4>{{ item.item_description }}</h4>
+            <a href="{% url 'food:delete_item' item.id %}" class="btn btn-success" style="padding: 3px;">Delete</a>
+        </div>
+
+    </div>
+</div>
+{% endblock %}
